assets/styles/tiger.css
* {
  -webkit-touch-callout: none;
  -webkit-user-select: none;
}

body {
  overflow-x: hidden;
}

.navbar-brand-logo {
  margin-right: 10px;
}

.main-header {
}

.li-subgroup {
  margin-left: 20px;
}

a.li-subgroup {
  color: black;
}

.hide {
  display: none;
}

.detail-view {
  position: absolute;
  right: -70%;
  top: 0;
  width: 60%;
  height: 100%;
  z-index: 12;
  background-color: #fff;
  box-shadow: #000 20px 20px 20px 20px;
  -webkit-transition: right 0.2s;
}

.detail-header {
  min-height: 52px;
  width: 100%;
  background-color: #f8f8f8;
  border-bottom: 1px solid #e7e7e7;
  color: #777;
  line-height: 20px;
  padding: 15px 15px;
  font-size: 18px;
}

.detail-body {
  padding: 10px;
}

.list-overlay {
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  z-index: -1;
  display: none;
  opacity: 0;
  background-color: rgba(0, 0, 0, 0.6);
  -webkit-transition: opacity 0.2s;
}

